Tue Jun 28 05:03:32 2011  Hiroshi Nakamura  <nahi@ruby-lang.org>

	* thread.c (rb_thread_local_aref): RDoc fix. Thread#[] example
	  had a race. See #4480.

Tue Jun 28 01:22:00 2011  Kenta Murata  <mrkn@mrkn.jp>

	* ext/bigdecimal/bigdecimal.c (BigMath_s_log): move BigMath.log from
	  bigdecimal/math.rb.

	* ext/bigdecimal/lib/bigdecimal/math.rb: ditto.

	* test/bigdecimal/test_bigdecimal.rb: move test for BigMath.log from
	  test/bigdecimal/test_bigmath.rb.

	* test/bigdecimal/test_bigmath.rb: ditto.

Tue Jun 28 01:19:52 2011  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* lib/irb/ruby-lex.rb: fix [Bug #4232].

Tue Jun 28 00:14:13 2011  Masatoshi SEKI  <m_seki@mva.biglobe.ne.jp>

	* lib/drb/drb.rb: fix [Bug #4409]. add DRbServer#here?.

	* test/drb/test_drb.rb: ditto.

	* test/drb/drbtest.rb: ditto.

	* test/drb/ut_eq.rb: ditto.

Tue Jun 28 00:08:43 2011  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* lib/irb/workspace.rb: fix BUG#4793.

Mon Jun 27 22:06:12 2011  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* thread_pthread.c (consume_communication_pipe): don't use C99
	  style variable length array.

Mon Jun 27 22:04:27 2011  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* thread_pthread.c (consume_communication_pipe): change return
	  type to void. caller doesn't use it.

Mon Jun 27 21:29:50 2011  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* thread_pthread.h (rb_global_vm_lock_struct): add volatile to
	  gvl->waiting. now thread_timer() access it w/o lock.

Mon Jun 27 21:16:11 2011  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* thread_pthread.c: s/__gvl_acquire/gvl_acquire_common/ and
	  s/__gvl_release/gvl_release_common/.

Mon Jun 27 11:41:47 2011  NARUSE, Yui  <naruse@ruby-lang.org>

	* thread_pthread.c (rb_thread_create_timer_thread):
	  the type of retrun value of write(2) is ssize_t.

Mon Jun 27 09:57:02 2011  Koichi Sasada  <ko1@atdot.net>

	* thread_pthread.c (rb_thread_create_timer_thread):
	  Fixes missing initialization of oflags.
